tests/errors/test_65.x
// No such function in module

import "standard.x" as std;

fn main() -> int {
    std::log("hello, world!\n");
}